--- a/style.css
+++ b/style.css
@@ -1,27 +1,34 @@
  #container {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-around;
 }
 
 .maincontainer {
-    width: 558px;
+    justify-content: space-between;
     display: flex;
     margin: 10px;
-    padding: 40px 0px 40px 40px;
+    padding: 20px;
     border: 5px solid black;
 }
+.filterDiv{
+    text-align: center;
+    padding: 10px;
+}
 .img{
-    width: 250px;
-    height: 250px;
+
+    width: 160px;
+    height: 196px;
 
 }
 .data{
+    width: 180px;
     padding-left:20px ;
 }
 .category{
     display: flex;
     width: 100%;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 .filter{
     margin: 0px;
@@ -30,10 +37,12 @@ align-items: center;
 
 }
 .filterContainer{
+
     padding-left: 10px;
     padding-right: 10px;
 }
 button{
+    display: flex;
     font-size: 25px;
     border-radius: 5px;
     border:2px solid black;
